fix text overflow in list items

--- a/pages/listview/style.css
+++ b/pages/listview/style.css
@@ -82,7 +82,7 @@ body {
 
 .list header {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 0.2fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 0.2fr);
     padding-left: 6em;
     padding-right: 6.8em;
     padding-bottom: 5px;
@@ -109,10 +109,18 @@ body {
     width: auto;
 }
 
+.list_item span {
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
 .list_item .info {
     flex: 1;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 0.2fr;
+    grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 1fr) minmax(0, 0.2fr);
     align-items: center;
     margin-left: 3em;
     margin-right: 4em;
@@ -178,13 +186,13 @@ body {
     }
 
     .list_item .info {
-        grid-template-columns: 1fr 1fr 0.3fr;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 0.45fr);
         margin-left: 1em;
-        margin-right: 1em;
+        margin-right: 0em;
     }
 
     #like_button {
-        margin-left: 1em;
+        margin-left: 0;
         margin-right: 1em;
     }
 
@@ -193,8 +201,8 @@ body {
     }
 
     .list header {
-        grid-template-columns: 1fr 1fr 0.3fr;
+        grid-template-columns: minmax(0, 1fr) minmax(0, 1fr) minmax(0, 0.45fr);
         padding-left: 4.4em;
-        padding-right: 4.5em;
+        padding-right: 2.8em;
     }
 }
